--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - lib/data/images
+    - lib/data/images/logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
