--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - lib/data/images/logo.png
+    - lib/assets/images/
 
   #   - images/a_dot_ham.jpeg
 
