--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image_picker: ^1.2.1
   path_provider: ^2.1.5
   permission_handler: ^12.0.1
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
